--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -47,19 +47,18 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\BGScroller.cs" />
-     <Compile Include="Assets\Scripts\DestroyByBoundary.cs" />
-     <Compile Include="Assets\Scripts\DestroyByContact.cs" />
-     <Compile Include="Assets\Scripts\DestroyByTime.cs" />
      <Compile Include="Assets\Scripts\EnemyLoot.cs" />
      <Compile Include="Assets\Scripts\EnergyBar.cs" />
-     <Compile Include="Assets\Scripts\EvasiveManeuver.cs" />
-     <Compile Include="Assets\Scripts\FixedDirectionMover.cs" />
      <Compile Include="Assets\Scripts\GameController.cs" />
      <Compile Include="Assets\Scripts\LootBox.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
-     <Compile Include="Assets\Scripts\RandomRotator.cs" />
      <Compile Include="Assets\Scripts\ResourceLoader.cs" />
-     <Compile Include="Assets\Scripts\WeaponController.cs" />
+     <Compile Include="Assets\Scripts\destroyers\DestroyByBoundary.cs" />
+     <Compile Include="Assets\Scripts\destroyers\DestroyByContact.cs" />
+     <Compile Include="Assets\Scripts\destroyers\DestroyByTime.cs" />
+     <Compile Include="Assets\Scripts\movers\EvasiveManeuver.cs" />
+     <Compile Include="Assets\Scripts\movers\FixedDirectionMover.cs" />
+     <Compile Include="Assets\Scripts\movers\RandomRotator.cs" />
      <Compile Include="Assets\Scripts\movers\ZMover.cs" />
      <Compile Include="Assets\Scripts\movers\ZXMover.cs" />
      <Compile Include="Assets\Scripts\weapons\EnemySeekerElement.cs" />
@@ -67,6 +66,7 @@
      <Compile Include="Assets\Scripts\weapons\SimpleGun.cs" />
      <Compile Include="Assets\Scripts\weapons\TripleGun.cs" />
      <Compile Include="Assets\Scripts\weapons\Weapon.cs" />
+     <Compile Include="Assets\Scripts\weapons\WeaponController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
